--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.0.1",
+    "bcryptjs": "^2.4.3",
+    "date-fns": "^4.1.0",
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.4",
     "next": "15.0.3",
+    "next-auth": "^4.24.11",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-calendar": "^5.1.0",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
